# esp-idf_component_library

configuration_file/: CMakeLists.txt  configuration_file.c
configuration_file/include/: configuration_file.h
esp_includes/: CMakeLists.txt
gsdc_bme280/: CMakeLists.txt  gsdc_bme280.cpp
gsdc_bme280/include/: gsdc_bme280.h
gsdc_bme280_iic/: CMakeLists.txt  bme_controller.cpp  gsdc_bme280_iic.cpp
gsdc_bme280_iic/include/: bme_controller.h  gsdc_bme280_iic.h
gsdc_cppiic/: CMakeLists.txt  gsdc_cppiic.cpp
gsdc_cppiic/include/: gsdc_cppiic.h
gsdc_cppspi/: CMakeLists.txt  gsdc_cppspi.cpp
gsdc_cppspi/include/: gsdc_cppspi.h
gsdc_iic/: CMakeLists.txt  Kconfig  iic_common.c  iic_configuration.c  iic_transmission.c
gsdc_iic/include/: gsdc_iic_common.h
gsdc_ota/: CMakeLists.txt  gsdc_ota.c  gsdc_ota_subsystem.c  ota_subsystem.c
gsdc_ota/include/: gsdc_ota.h  gsdc_ota_subsystem.h  ota_subsystem.h
gsdc_ota/include/web/: identity.html  index.html
gsdc_ssd1306/: CMakeLists.txt  Kconfig.projbuild  gsdc_ssd1306.c  ssd1306_controller.cpp  ssd1306_i2c.c  ssd1306_spi.c
gsdc_ssd1306/include/: font8x8_basic.h  gsdc_ssd1306.h  oled_semaphore.h  ssd1306_controller.h
gsdc_telemetry/: CMakeLists.txt  gsdc_sensor.cpp
gsdc_telemetry/include/: gsdc_sensor.h
gsdc_utils/: CMakeLists.txt  gsdc_string_utils.c
gsdc_utils/include/: gsdc_string_utils.h
iic/: iic_client.c  iic_configuration.c  iic_master.c
iic/include/: gsdc_iic_common.h  gsdc_iic_master.h
led_controller/: CMakeLists.txt
led_controller/include/: led_controller.h
spiffs_file/: CMakeLists.txt  Kconfig  spiffs_file.c
(+1 files in other folders)
